[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scripts/TitleScene/Title.gd" type="Script" id=1]
[ext_resource path="res://assets/menu-background.jpg" type="Texture" id=2]
[ext_resource path="res://assets/PNG/marbles/Blue.png" type="Texture" id=3]
[ext_resource path="res://assets/PNG/marbles/Cyan.png" type="Texture" id=4]
[ext_resource path="res://assets/PNG/marbles/Green.png" type="Texture" id=5]
[ext_resource path="res://assets/PNG/marbles/Grey.png" type="Texture" id=6]
[ext_resource path="res://assets/PNG/marbles/Orange.png" type="Texture" id=7]
[ext_resource path="res://assets/PNG/marbles/Pink.png" type="Texture" id=8]
[ext_resource path="res://assets/PNG/marbles/Red.png" type="Texture" id=9]
[ext_resource path="res://assets/PNG/marbles/Teal.png" type="Texture" id=10]
[ext_resource path="res://assets/PNG/marbles/Yellow.png" type="Texture" id=11]
[ext_resource path="res://Fonts/MyFont.fnt" type="BitmapFont" id=12]

[node name="TitleSceneRoot" type="Node"]

script/script = ExtResource( 1 )

[node name="TitleBackgroundTex" type="TextureFrame" parent="."]

visibility/opacity = 0.3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 3840.0
margin/bottom = 2160.0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 32.0
margin/right = -500.0
margin/bottom = -32.0
alignment = 1

[node name="Blue" type="MenuButton" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 142.0
margin/top = 0.0
margin/right = 218.0
margin/bottom = 70.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 3 )
flat = true
items = [  ]
__meta__ = { "_edit_lock_":true }

[node name="Cyan" type="MenuButton" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 222.0
margin/top = 0.0
margin/right = 298.0
margin/bottom = 70.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 4 )
flat = true
items = [  ]
__meta__ = { "_edit_lock_":true }

[node name="Green" type="MenuButton" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 302.0
margin/top = 0.0
margin/right = 378.0
margin/bottom = 70.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 5 )
flat = true
items = [  ]
__meta__ = { "_edit_lock_":true }

[node name="Grey" type="MenuButton" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 382.0
margin/top = 0.0
margin/right = 458.0
margin/bottom = 70.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 6 )
flat = true
items = [  ]
__meta__ = { "_edit_lock_":true }

[node name="Orange" type="MenuButton" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 462.0
margin/top = 0.0
margin/right = 538.0
margin/bottom = 70.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 7 )
flat = true
items = [  ]
__meta__ = { "_edit_lock_":true }

[node name="Pink" type="MenuButton" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 542.0
margin/top = 0.0
margin/right = 618.0
margin/bottom = 70.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 8 )
flat = true
items = [  ]
__meta__ = { "_edit_lock_":true }

[node name="Red" type="MenuButton" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 622.0
margin/top = 0.0
margin/right = 698.0
margin/bottom = 70.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 9 )
flat = true
items = [  ]
__meta__ = { "_edit_lock_":true }

[node name="Teal" type="MenuButton" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 702.0
margin/top = 0.0
margin/right = 778.0
margin/bottom = 70.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 10 )
flat = true
items = [  ]
__meta__ = { "_edit_lock_":true }

[node name="Yellow" type="MenuButton" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 782.0
margin/top = 0.0
margin/right = 858.0
margin/bottom = 70.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
icon = ExtResource( 11 )
flat = true
items = [  ]
__meta__ = { "_edit_lock_":true }

[node name="TitleText" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 804.0
margin/top = 178.0
margin/right = 1609.0
margin/bottom = 329.0
custom_fonts/font = ExtResource( 12 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="HBoxContainer/Blue" to="." method="_on_Blue_pressed"]

[connection signal="pressed" from="HBoxContainer/Cyan" to="." method="_on_Cyan_pressed"]

[connection signal="pressed" from="HBoxContainer/Green" to="." method="_on_Green_pressed"]

[connection signal="pressed" from="HBoxContainer/Grey" to="." method="_on_Grey_pressed"]

[connection signal="pressed" from="HBoxContainer/Orange" to="." method="_on_Orange_pressed"]

[connection signal="pressed" from="HBoxContainer/Pink" to="." method="_on_Pink_pressed"]

[connection signal="pressed" from="HBoxContainer/Red" to="." method="_on_Red_pressed"]

[connection signal="pressed" from="HBoxContainer/Teal" to="." method="_on_Teal_pressed"]

[connection signal="pressed" from="HBoxContainer/Yellow" to="." method="_on_Yellow_pressed"]


